syncing before switch comps

--- a/hackathon/profundo/data_processing/03_meancenter_SWC.ipynb
+++ b/hackathon/profundo/data_processing/03_meancenter_SWC.ipynb
@@ -2,9 +2,511 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_span =  20946.0 20924.0\n",
+      "y_span =  43664.0 43604.5\n",
+      "z_span =  6734.67 6726.68\n",
+      "x_span =  21067.0 21052.8\n",
+      "y_span =  20479.0 20472.0\n",
+      "z_span =  4976.0 4974.0\n",
+      "x_span =  22038.0 22021.1\n",
+      "y_span =  21922.4 21830.6\n",
+      "z_span =  2960.0 2954.52\n",
+      "x_span =  14204.0 14194.0\n",
+      "y_span =  41683.0 41669.0\n",
+      "z_span =  2850.85 2836.0\n",
+      "x_span =  14807.0 14762.5\n",
+      "y_span =  29289.9 29277.0\n",
+      "z_span =  3453.0 3445.0\n",
+      "x_span =  23742.0 23725.8\n",
+      "y_span =  20310.0 20255.6\n",
+      "z_span =  6831.34 6826.69\n",
+      "x_span =  16274.0 16260.5\n",
+      "y_span =  40449.7 40444.0\n",
+      "z_span =  5237.87 5235.0\n",
+      "x_span =  22847.3 22818.0\n",
+      "y_span =  20861.1 20845.0\n",
+      "z_span =  7025.0 7022.0\n",
+      "x_span =  21093.0 21093.0\n",
+      "y_span =  20718.3 20715.3\n",
+      "z_span =  4895.33 4894.75\n",
+      "x_span =  17967.3 17832.3\n",
+      "y_span =  47580.9 47555.3\n",
+      "z_span =  5570.57 5550.41\n",
+      "x_span =  13760.9 13714.8\n",
+      "y_span =  21728.2 21714.2\n",
+      "z_span =  5975.21 5972.61\n",
+      "x_span =  13938.0 13918.0\n",
+      "y_span =  21800.7 21800.0\n",
+      "z_span =  6037.0 6034.76\n",
+      "x_span =  13715.9 13696.1\n",
+      "y_span =  21548.7 21530.6\n",
+      "z_span =  5907.7 5900.36\n",
+      "x_span =  21743.0 21720.8\n",
+      "y_span =  45757.8 45733.1\n",
+      "z_span =  4154.0 4152.0\n",
+      "x_span =  19125.0 19015.7\n",
+      "y_span =  20297.0 20291.4\n",
+      "z_span =  3469.08 3455.0\n",
+      "x_span =  15934.8 15854.5\n",
+      "y_span =  22331.1 22310.6\n",
+      "z_span =  4314.0 4305.14\n",
+      "x_span =  16493.0 16482.2\n",
+      "y_span =  22912.9 22842.6\n",
+      "z_span =  4820.26 4805.37\n",
+      "x_span =  20657.0 20521.5\n",
+      "y_span =  12508.0 12476.0\n",
+      "z_span =  5391.0 5360.0\n",
+      "x_span =  13795.0 13779.3\n",
+      "y_span =  18745.2 18615.3\n",
+      "z_span =  4058.85 4051.0\n",
+      "x_span =  19142.0 19115.0\n",
+      "y_span =  18455.0 18388.7\n",
+      "z_span =  4478.96 4459.0\n",
+      "x_span =  26246.0 26161.1\n",
+      "y_span =  19444.7 19383.0\n",
+      "z_span =  6609.0 6604.0\n",
+      "x_span =  16482.0 16422.0\n",
+      "y_span =  39321.9 39268.0\n",
+      "z_span =  4416.45 4410.0\n",
+      "x_span =  28590.0 28552.0\n",
+      "y_span =  21120.2 21090.0\n",
+      "z_span =  4670.47 4665.11\n",
+      "x_span =  16709.9 16694.0\n",
+      "y_span =  15746.0 15738.0\n",
+      "z_span =  3202.32 3202.32\n",
+      "x_span =  21716.0 21698.1\n",
+      "y_span =  20922.0 20900.0\n",
+      "z_span =  2784.28 2780.59\n",
+      "x_span =  19508.0 19501.3\n",
+      "y_span =  17845.0 17841.2\n",
+      "z_span =  3038.0 3037.9\n",
+      "x_span =  17554.0 17526.2\n",
+      "y_span =  15836.0 15816.1\n",
+      "z_span =  3018.23 3016.31\n",
+      "x_span =  24589.2 24569.0\n",
+      "y_span =  39732.0 39675.1\n",
+      "z_span =  6304.0 6300.0\n",
+      "x_span =  17258.6 17232.2\n",
+      "y_span =  16484.0 16461.9\n",
+      "z_span =  2958.15 2954.0\n",
+      "x_span =  18633.7 18602.2\n",
+      "y_span =  16511.2 16376.0\n",
+      "z_span =  4707.35 4691.41\n",
+      "x_span =  22915.2 22812.0\n",
+      "y_span =  11720.0 11626.0\n",
+      "z_span =  5796.59 5778.59\n",
+      "x_span =  13111.5 13050.9\n",
+      "y_span =  22339.2 22190.5\n",
+      "z_span =  5641.02 5501.87\n",
+      "x_span =  16478.2 16425.0\n",
+      "y_span =  38901.8 38800.0\n",
+      "z_span =  4620.0 4607.2\n",
+      "x_span =  18426.0 18306.1\n",
+      "y_span =  47929.0 47900.1\n",
+      "z_span =  5587.0 5579.95\n",
+      "x_span =  16691.0 16670.0\n",
+      "y_span =  38981.1 38944.4\n",
+      "z_span =  4576.89 4565.0\n",
+      "x_span =  20955.3 20902.0\n",
+      "y_span =  43937.0 43920.0\n",
+      "z_span =  6703.47 6692.0\n",
+      "x_span =  13298.1 13298.1\n",
+      "y_span =  21683.6 21683.6\n",
+      "z_span =  5871.67 5871.67\n",
+      "x_span =  24719.6 24594.3\n",
+      "y_span =  39286.0 39207.7\n",
+      "z_span =  6210.0 6163.96\n",
+      "x_span =  24814.0 24812.0\n",
+      "y_span =  41993.0 41966.6\n",
+      "z_span =  5273.89 5272.0\n",
+      "x_span =  13294.0 13293.5\n",
+      "y_span =  42785.0 42784.8\n",
+      "z_span =  4160.0 4160.0\n",
+      "x_span =  24378.7 24378.5\n",
+      "y_span =  21906.8 21870.4\n",
+      "z_span =  7271.69 7265.4\n",
+      "x_span =  26247.7 26184.2\n",
+      "y_span =  19295.3 19234.2\n",
+      "z_span =  6648.25 6645.69\n",
+      "x_span =  21782.0 21756.9\n",
+      "y_span =  21265.0 21253.1\n",
+      "z_span =  2962.0 2958.0\n",
+      "x_span =  13301.0 13284.0\n",
+      "y_span =  21709.9 21685.3\n",
+      "z_span =  5871.0 5856.06\n",
+      "x_span =  20073.0 20051.0\n",
+      "y_span =  11161.8 11139.4\n",
+      "z_span =  5262.66 5255.73\n",
+      "x_span =  20631.1 20448.0\n",
+      "y_span =  37224.0 37200.0\n",
+      "z_span =  3168.97 3164.96\n",
+      "x_span =  22046.0 22033.0\n",
+      "y_span =  31067.0 30972.9\n",
+      "z_span =  1051.0 1037.0\n",
+      "x_span =  20280.0 20236.9\n",
+      "y_span =  10716.1 10565.8\n",
+      "z_span =  5276.99 5267.94\n",
+      "x_span =  21619.4 21577.5\n",
+      "y_span =  45040.0 45019.0\n",
+      "z_span =  4095.4 4084.11\n",
+      "x_span =  13518.2 13516.9\n",
+      "y_span =  21831.7 21830.2\n",
+      "z_span =  5997.97 5997.89\n",
+      "x_span =  26618.0 26596.1\n",
+      "y_span =  21955.6 21910.0\n",
+      "z_span =  6504.0 6486.01\n",
+      "x_span =  10848.3 10816.9\n",
+      "y_span =  46749.7 46671.5\n",
+      "z_span =  5844.23 5832.84\n",
+      "x_span =  21394.0 21376.5\n",
+      "y_span =  11341.8 11320.0\n",
+      "z_span =  5303.0 5294.98\n",
+      "x_span =  21346.7 21290.5\n",
+      "y_span =  11397.9 11391.7\n",
+      "z_span =  5333.03 5328.0\n",
+      "x_span =  23360.3 23360.0\n",
+      "y_span =  20829.1 20827.1\n",
+      "z_span =  7032.98 7032.89\n",
+      "x_span =  21114.0 21107.0\n",
+      "y_span =  20374.2 20335.9\n",
+      "z_span =  4919.0 4917.0\n",
+      "x_span =  22576.0 22552.5\n",
+      "y_span =  45380.0 45313.5\n",
+      "z_span =  4550.58 4541.38\n",
+      "x_span =  26544.0 26486.0\n",
+      "y_span =  18745.2 18512.0\n",
+      "z_span =  6332.64 6304.07\n",
+      "x_span =  19587.0 19564.8\n",
+      "y_span =  19162.9 19139.8\n",
+      "z_span =  4579.33 4576.86\n",
+      "x_span =  24974.3 24928.5\n",
+      "y_span =  39937.3 39886.0\n",
+      "z_span =  6303.67 6285.96\n",
+      "x_span =  21820.8 21798.0\n",
+      "y_span =  45328.9 45322.0\n",
+      "z_span =  4807.98 4799.0\n",
+      "x_span =  16137.0 16130.8\n",
+      "y_span =  30523.0 30502.0\n",
+      "z_span =  3854.0 3844.44\n",
+      "x_span =  22759.3 22750.0\n",
+      "y_span =  44098.0 44072.4\n",
+      "z_span =  4530.0 4522.17\n",
+      "x_span =  22424.0 22191.9\n",
+      "y_span =  43866.1 43712.0\n",
+      "z_span =  5034.51 5030.51\n",
+      "x_span =  20955.9 20925.0\n",
+      "y_span =  44345.5 44240.0\n",
+      "z_span =  6812.0 6781.0\n",
+      "x_span =  20412.5 20389.0\n",
+      "y_span =  43859.8 43859.1\n",
+      "z_span =  6747.0 6742.4\n",
+      "x_span =  19029.0 18950.1\n",
+      "y_span =  47864.0 47802.4\n",
+      "z_span =  5032.0 5005.3\n",
+      "x_span =  23491.7 23445.0\n",
+      "y_span =  14410.8 14386.0\n",
+      "z_span =  3544.0 3542.12\n",
+      "x_span =  11673.0 11644.2\n",
+      "y_span =  45365.0 45340.8\n",
+      "z_span =  4695.0 4692.0\n",
+      "x_span =  22980.7 22968.0\n",
+      "y_span =  44543.3 44462.1\n",
+      "z_span =  5171.0 5157.3\n",
+      "x_span =  20902.5 20690.4\n",
+      "y_span =  11391.5 11331.9\n",
+      "z_span =  5242.89 5227.77\n",
+      "x_span =  23139.2 23129.0\n",
+      "y_span =  21108.0 21098.0\n",
+      "z_span =  7092.0 7088.09\n",
+      "x_span =  21542.0 21496.0\n",
+      "y_span =  12689.8 12619.0\n",
+      "z_span =  4007.0 4002.27\n",
+      "x_span =  27141.1 27130.5\n",
+      "y_span =  18025.5 18021.3\n",
+      "z_span =  5141.33 5139.18\n",
+      "x_span =  16093.0 16058.5\n",
+      "y_span =  40603.3 40587.0\n",
+      "z_span =  4206.0 4204.0\n",
+      "x_span =  17088.8 17081.3\n",
+      "y_span =  15539.3 15534.2\n",
+      "z_span =  3157.34 3152.44\n",
+      "x_span =  25854.0 25843.0\n",
+      "y_span =  19268.9 19143.0\n",
+      "z_span =  6589.0 6579.0\n",
+      "x_span =  15884.0 15848.2\n",
+      "y_span =  39336.0 39139.6\n",
+      "z_span =  3534.36 3525.99\n",
+      "x_span =  26357.0 26349.3\n",
+      "y_span =  18576.0 18565.4\n",
+      "z_span =  6356.0 6354.16\n",
+      "x_span =  12098.0 12083.0\n",
+      "y_span =  39578.1 39548.0\n",
+      "z_span =  3464.98 3449.06\n",
+      "x_span =  21351.9 21334.2\n",
+      "y_span =  45643.4 45611.1\n",
+      "z_span =  4143.76 4140.16\n",
+      "x_span =  17378.0 17357.2\n",
+      "y_span =  15641.7 15626.4\n",
+      "z_span =  3187.35 3182.16\n",
+      "x_span =  21988.7 21968.1\n",
+      "y_span =  36164.3 36156.7\n",
+      "z_span =  3223.0 3222.0\n",
+      "x_span =  20276.8 20261.0\n",
+      "y_span =  11591.0 11564.0\n",
+      "z_span =  5261.0 5260.0\n",
+      "x_span =  24000.0 23879.3\n",
+      "y_span =  20368.0 20232.2\n",
+      "z_span =  7074.15 7015.75\n",
+      "x_span =  18985.5 18970.0\n",
+      "y_span =  39051.6 39042.0\n",
+      "z_span =  4958.0 4952.0\n",
+      "x_span =  18703.7 18680.0\n",
+      "y_span =  19172.0 19167.0\n",
+      "z_span =  5817.0 5816.03\n",
+      "x_span =  18700.7 18692.7\n",
+      "y_span =  38817.7 38789.6\n",
+      "z_span =  2371.0 2368.0\n",
+      "x_span =  14234.0 14223.4\n",
+      "y_span =  41966.0 41962.0\n",
+      "z_span =  2876.34 2873.0\n",
+      "x_span =  21874.0 21856.2\n",
+      "y_span =  43971.7 43918.0\n",
+      "z_span =  6320.64 6308.74\n",
+      "x_span =  19554.3 19348.0\n",
+      "y_span =  19336.6 18880.0\n",
+      "z_span =  4937.0 4921.0\n",
+      "x_span =  22000.0 21990.0\n",
+      "y_span =  20940.9 20850.0\n",
+      "z_span =  2922.3 2914.33\n",
+      "x_span =  21520.7 21520.7\n",
+      "y_span =  45078.5 45078.5\n",
+      "z_span =  4110.86 4110.86\n",
+      "x_span =  16401.0 16398.0\n",
+      "y_span =  31221.0 31199.6\n",
+      "z_span =  3825.0 3822.94\n",
+      "x_span =  23076.7 22999.0\n",
+      "y_span =  23693.8 23553.0\n",
+      "z_span =  3140.97 3134.0\n",
+      "x_span =  13669.0 13634.9\n",
+      "y_span =  21874.9 21798.3\n",
+      "z_span =  5925.0 5918.92\n",
+      "x_span =  15332.0 15320.0\n",
+      "y_span =  35174.0 35146.2\n",
+      "z_span =  2346.0 2337.43\n",
+      "x_span =  15287.8 15276.0\n",
+      "y_span =  34556.7 34553.0\n",
+      "z_span =  2152.0 2151.0\n",
+      "x_span =  27196.4 27184.0\n",
+      "y_span =  20460.5 20430.3\n",
+      "z_span =  4359.56 4350.02\n",
+      "x_span =  22547.7 22487.8\n",
+      "y_span =  43717.0 43588.7\n",
+      "z_span =  5024.0 5021.0\n",
+      "x_span =  21943.4 21942.1\n",
+      "y_span =  36688.2 36686.8\n",
+      "z_span =  3224.28 3223.67\n",
+      "x_span =  17295.0 17284.0\n",
+      "y_span =  15614.0 15577.2\n",
+      "z_span =  3143.0 3136.36\n",
+      "x_span =  23137.0 23079.6\n",
+      "y_span =  20867.0 20695.1\n",
+      "z_span =  7275.0 7271.0\n",
+      "x_span =  19208.0 19189.0\n",
+      "y_span =  38188.0 38066.0\n",
+      "z_span =  2470.31 2454.0\n",
+      "x_span =  26691.0 26685.3\n",
+      "y_span =  20928.4 20925.0\n",
+      "z_span =  6481.95 6481.0\n",
+      "x_span =  21224.0 21036.0\n",
+      "y_span =  38968.0 38726.2\n",
+      "z_span =  3162.27 3152.96\n",
+      "x_span =  15344.3 15312.9\n",
+      "y_span =  31038.0 31031.9\n",
+      "z_span =  3422.0 3412.02\n",
+      "x_span =  25146.0 25141.3\n",
+      "y_span =  39448.0 39444.0\n",
+      "z_span =  6046.0 6043.46\n",
+      "x_span =  23131.0 23114.1\n",
+      "y_span =  44159.9 44149.0\n",
+      "z_span =  5138.0 5136.0\n",
+      "x_span =  22831.0 22829.1\n",
+      "y_span =  43830.5 43813.9\n",
+      "z_span =  4521.0 4521.0\n",
+      "x_span =  18900.0 18886.0\n",
+      "y_span =  39377.7 39352.0\n",
+      "z_span =  4890.0 4888.0\n",
+      "x_span =  27512.0 27502.1\n",
+      "y_span =  21278.0 21212.7\n",
+      "z_span =  4562.0 4554.46\n",
+      "x_span =  24731.3 24688.1\n",
+      "y_span =  39409.7 39387.9\n",
+      "z_span =  6246.35 6241.01\n",
+      "x_span =  22283.3 22260.7\n",
+      "y_span =  44069.3 44049.6\n",
+      "z_span =  5084.52 5084.29\n",
+      "x_span =  14107.5 14096.0\n",
+      "y_span =  41857.0 41855.0\n",
+      "z_span =  2921.45 2920.0\n",
+      "x_span =  22801.4 22741.5\n",
+      "y_span =  20640.7 20578.7\n",
+      "z_span =  7095.63 7087.96\n",
+      "x_span =  13308.0 13295.7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y_span =  22102.0 22080.4\n",
+      "z_span =  5885.0 5878.36\n",
+      "x_span =  23999.9 23972.4\n",
+      "y_span =  17467.3 17455.0\n",
+      "z_span =  2709.99 2699.0\n",
+      "x_span =  21208.0 21202.2\n",
+      "y_span =  45192.0 45183.3\n",
+      "z_span =  4105.32 4105.0\n",
+      "x_span =  14373.1 14362.8\n",
+      "y_span =  41880.0 41870.7\n",
+      "z_span =  2903.21 2893.92\n",
+      "x_span =  21528.0 21515.6\n",
+      "y_span =  45228.0 45204.0\n",
+      "z_span =  4189.0 4185.14\n",
+      "x_span =  17001.0 16993.0\n",
+      "y_span =  15687.0 15670.1\n",
+      "z_span =  3258.77 3253.0\n",
+      "x_span =  22282.5 22279.4\n",
+      "y_span =  30942.6 30896.3\n",
+      "z_span =  914.445 870.089\n",
+      "x_span =  21378.0 21363.6\n",
+      "y_span =  45371.6 45336.0\n",
+      "z_span =  4121.86 4120.75\n",
+      "x_span =  25906.5 25621.6\n",
+      "y_span =  17911.4 17847.0\n",
+      "z_span =  6294.84 6264.59\n",
+      "x_span =  23360.0 23290.1\n",
+      "y_span =  43872.0 43838.1\n",
+      "z_span =  4462.45 4430.45\n",
+      "x_span =  15772.0 15726.5\n",
+      "y_span =  35607.0 35594.0\n",
+      "z_span =  2461.0 2459.0\n",
+      "x_span =  16454.4 16390.0\n",
+      "y_span =  47504.0 47393.3\n",
+      "z_span =  5324.3 5280.54\n",
+      "x_span =  13957.0 13939.0\n",
+      "y_span =  21714.0 21621.6\n",
+      "z_span =  5815.0 5812.0\n",
+      "x_span =  22657.0 22564.5\n",
+      "y_span =  11684.1 11630.0\n",
+      "z_span =  5538.06 5530.3\n",
+      "x_span =  22365.6 22361.0\n",
+      "y_span =  36467.9 36467.0\n",
+      "z_span =  3281.0 3281.0\n",
+      "x_span =  21697.5 21661.5\n",
+      "y_span =  12271.4 12202.4\n",
+      "z_span =  3883.13 3869.78\n",
+      "x_span =  14477.6 14445.0\n",
+      "y_span =  34557.0 34549.0\n",
+      "z_span =  2157.0 2148.09\n",
+      "x_span =  18149.5 18113.9\n",
+      "y_span =  17554.7 17544.3\n",
+      "z_span =  4821.96 4816.0\n",
+      "x_span =  17307.5 17254.0\n",
+      "y_span =  21836.0 21720.0\n",
+      "z_span =  4461.0 4440.93\n",
+      "x_span =  14799.4 14762.4\n",
+      "y_span =  33721.8 33710.9\n",
+      "z_span =  3041.11 3037.59\n",
+      "x_span =  22673.6 22590.0\n",
+      "y_span =  30892.0 30884.1\n",
+      "z_span =  1010.0 997.0\n",
+      "x_span =  14673.0 14614.4\n",
+      "y_span =  33761.5 33755.0\n",
+      "z_span =  3061.46 3053.0\n",
+      "x_span =  16193.0 16188.0\n",
+      "y_span =  30355.8 30297.0\n",
+      "z_span =  3774.86 3774.0\n",
+      "x_span =  13787.0 13753.0\n",
+      "y_span =  32431.0 32383.0\n",
+      "z_span =  3443.0 3440.0\n",
+      "x_span =  16864.0 16839.5\n",
+      "y_span =  22884.0 22876.2\n",
+      "z_span =  4774.55 4773.45\n",
+      "x_span =  21746.0 21667.4\n",
+      "y_span =  20850.0 20792.9\n",
+      "z_span =  2878.29 2862.61\n",
+      "x_span =  25444.7 25407.5\n",
+      "y_span =  39477.9 39464.0\n",
+      "z_span =  6187.54 6167.0\n",
+      "x_span =  24198.0 24186.0\n",
+      "y_span =  17898.6 17825.0\n",
+      "z_span =  6972.0 6946.1\n",
+      "x_span =  23267.2 23234.0\n",
+      "y_span =  21709.1 21520.9\n",
+      "z_span =  7016.09 7009.69\n",
+      "x_span =  14009.6 13999.9\n",
+      "y_span =  33656.4 33609.8\n",
+      "z_span =  3285.25 3281.23\n",
+      "x_span =  27395.0 27385.2\n",
+      "y_span =  20929.0 20904.7\n",
+      "z_span =  4554.0 4550.4\n",
+      "x_span =  12847.9 12660.0\n",
+      "y_span =  41952.0 41909.0\n",
+      "z_span =  4173.0 4163.11\n",
+      "x_span =  24203.0 24183.0\n",
+      "y_span =  17205.0 17184.0\n",
+      "z_span =  2730.0 2721.04\n",
+      "x_span =  19051.0 19031.4\n",
+      "y_span =  39227.4 39217.0\n",
+      "z_span =  4894.0 4884.0\n",
+      "x_span =  27467.4 27462.2\n",
+      "y_span =  20723.9 20714.9\n",
+      "z_span =  4542.76 4541.49\n",
+      "x_span =  21385.0 21382.0\n",
+      "y_span =  45126.0 45084.0\n",
+      "z_span =  4189.0 4185.0\n",
+      "x_span =  24454.0 24333.0\n",
+      "y_span =  38985.9 38879.0\n",
+      "z_span =  5940.0 5897.04\n",
+      "x_span =  25739.0 25719.1\n",
+      "y_span =  19262.6 19134.0\n",
+      "z_span =  6660.0 6629.03\n",
+      "x_span =  22026.4 21998.8\n",
+      "y_span =  36677.3 36667.6\n",
+      "z_span =  3282.67 3278.57\n",
+      "x_span =  17087.0 17077.3\n",
+      "y_span =  19311.0 19292.1\n",
+      "z_span =  4791.0 4784.99\n",
+      "x_span =  21017.0 21006.0\n",
+      "y_span =  19298.0 19281.8\n",
+      "z_span =  2676.0 2675.0\n",
+      "x_span =  22169.6 22142.0\n",
+      "y_span =  44844.0 44798.6\n",
+      "z_span =  4612.27 4605.0\n",
+      "x_span =  16512.0 16496.8\n",
+      "y_span =  22982.2 22968.0\n",
+      "z_span =  4835.0 4830.0\n",
+      "x_span =  21384.0 21378.8\n",
+      "y_span =  17344.0 17219.5\n",
+      "z_span =  2618.17 2596.79\n",
+      "x_span =  14236.0 14140.0\n",
+      "y_span =  33851.0 33801.0\n",
+      "z_span =  3121.75 3104.0\n",
+      "x_span =  27402.0 27394.6\n",
+      "y_span =  20515.0 20498.5\n",
+      "z_span =  4416.45 4408.11\n",
+      "x_span =  23628.8 23612.4\n",
+      "y_span =  14575.2 14572.5\n",
+      "z_span =  3510.26 3509.2\n"
+     ]
+    }
+   ],
    "source": [
     "from swc_io import get_fnames_and_abspath_from_dir, swc_to_dframe, resample_swc, dframe_to_swc\n",
     "import numpy as np\n",
@@ -12,8 +514,36 @@
     "\n",
     "UPSAMPLED_BRANCHES_DIR = \"../data/04_human_branches_filtered_upsampled\"\n",
     "MEAN_CENTERED_BRANCHES_DIR = \"../data/05_meancentered_branches\"\n",
-    "\n"
+    "\n",
+    "fnames, abs_paths = get_fnames_and_abspath_from_dir(UPSAMPLED_BRANCHES_DIR)\n",
+    "for i in range(len(fnames)):\n",
+    "    nodes = swc_to_dframe(abs_paths[i])\n",
+    "    \n",
+    "    x_center = nodes.x.max() - nodes.x.min())\n",
+    "    print(\"y_span = \", nodes.y.max(), nodes.y.min())\n",
+    "    print(\"z_span = \", nodes.z.max(), nodes.z.min())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
