make sure dir is not empty

--- a/hackathon/profundo/data_processing/01_clean_parse.ipynb
+++ b/hackathon/profundo/data_processing/01_clean_parse.ipynb
@@ -33,6 +33,7 @@
     "RAW_HUMAN_TRAJECTORY_DIR = \"../data/01_raw_human_annotations/\"\n",
     "\n",
     "fnames, abs_paths = get_fnames_and_abspath_from_dir(RAW_HUMAN_TRAJECTORY_DIR)\n",
+    "assert(len(fnames) > 0)\n",
     "remove_comments_from_swc(abs_paths, fnames)"
    ]
   },
