resampling the same swc file

--- a/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
+++ b/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
@@ -38,10 +38,16 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "\n",
     "BRANCHES_DIR = \"../data/03_human_branches_splitted\"\n",
-    "UPSAMPLED_BRANCHES_DIR = \"../data/04_human_branches_filtered_upsampled\"\n",
-    "\n",
+    "UPSAMPLED_BRANCHES_DIR = \"../data/04_human_branches_filtered_upsampled\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import tkinter as tk\n",
     "from tkinter import filedialog\n",
     "\n",
@@ -72,16 +78,26 @@
     "\n",
     "print(\"filtering branches that have any dimension smaller than \", TARGET_DIM_SIZE)\n",
     "\n",
-    "fnames, abs_paths = get_fnames_and_abspath_from_dir(UPSAMPLED_BRANCHES_DIR)\n",
+    "print(\"USING BRANCHES instead of filtered branches!\")\n",
+    "fnames, abs_paths = get_fnames_and_abspath_from_dir(BRANCHES_DIR)\n",
+    "assert(len(fnames)>0)\n",
     "total_dim = 0\n",
+    "total_skipped = 0\n",
     "for i in range(len(fnames)):\n",
     "    \n",
-    "        # replace nodes with our upsampled nodes\n",
-    "        nodes = swc_to_dframe(upsampled_fpath)\n",
-    "    \n",
-    "    if i % 1000 == 0 and i != 0: print(\"testing branch #\", i, \"avg span: \", total_dim/i/3)\n",
+    "    # replace nodes with our upsampled nodes\n",
     "    nodes = swc_to_dframe(abs_paths[i])\n",
-    "    assert(isinstance(nodes, pd.DataFrame))\n",
+    "    \n",
+    "    \n",
+    "    if (i % 100 == 0):\n",
+    "        print(\"testing branch #\", i, \"avg span: \", total_dim/3)\n",
+    "        \n",
+    "    nodes = swc_to_dframe(abs_paths[i])\n",
+    "    try:\n",
+    "        assert(isinstance(nodes, pd.DataFrame))\n",
+    "    except:\n",
+    "        total_skipped += 1\n",
+    "        continue\n",
     "    \n",
     "    x_span = nodes.x.max() - nodes.x.min()\n",
     "    y_span = nodes.y.max() - nodes.y.min()\n",
@@ -105,19 +121,23 @@
     "                              (nodes.z.between(nodes.z.min()+padding,nodes.z.max()+padding))]\n",
     "        \n",
     "        if len(central_nodes) > 0:\n",
-    "            # sample a central node\n",
-    "            center_node = central_nodes.sample(n=1)\n",
-    "            # grab all nodes in neighborhood of center_node\n",
-    "            sample = nodes.loc[(nodes.x.between(center_node.x.item()-half_size, center_node.x.item()+half_size)) &\n",
-    "                              (nodes.y.between(center_node.y.item()-half_size, center_node.y.item()+half_size)) &\n",
-    "                              (nodes.z.between(center_node.z.item()-half_size, center_node.z.item()+half_size))]\n",
-    "            \n",
-    "            # save sample to swc\n",
-    "            print(\"saving \", fnames[i])\n",
-    "            dframe_to_swc(fnames[i], sample)\n",
+    "            # sample more than once from same swc file\n",
+    "            for j in range(50):\n",
+    "                # sample a central node\n",
+    "                center_node = central_nodes.sample(n=1)\n",
+    "                # grab all nodes in neighborhood of center_node\n",
+    "                sample = nodes.loc[(nodes.x.between(center_node.x.item()-half_size, center_node.x.item()+half_size)) &\n",
+    "                                  (nodes.y.between(center_node.y.item()-half_size, center_node.y.item()+half_size)) &\n",
+    "                                  (nodes.z.between(center_node.z.item()-half_size, center_node.z.item()+half_size))]\n",
+    "\n",
+    "                # save sample to swc\n",
+    "                #print(\"saving \", fnames[i])\n",
+    "                dframe_to_swc(fnames[i]+\"sample{}\".format(j), sample)\n",
     "    else:  # SWC does not have large enough dims\n",
     "        #print(\"dims too small \", x_span, y_span, z_span) \n",
     "        pass\n",
+    "    \n",
+    "print(total_skipped)\n",
     "    \n",
     "    "
    ]
