--- a/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
+++ b/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
@@ -43,8 +43,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Specify the path to the Vaa3D compiled binary: \"/path/to/v3d_external/bin/vaa3d\""
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,119 +61,49 @@
     "root = tk.Tk()\n",
     "root.withdraw()\n",
     "\n",
-    "vaa3d_path = filedialog.askopenfilename(title='Select compiled Vaa3d binary')\n",
-    "\n",
-    "fnames, abs_paths = get_fnames_and_abspath_from_dir(BRANCHES_DIR)\n",
-    "total_dim = 0\n",
-    "for i in range(len(fnames)):\n",
-    "    # upsample the SWC\n",
-    "    upsampled_fpath = resample_swc(fnames[i], abs_paths[i], vaa3d_path)\n",
-    "  "
+    "vaa3d_path = filedialog.askopenfilename(title='Select compiled Vaa3d binary')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the \"resample_swc\" Vaa3D plugin (written in C) to upsample all our data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "filtering branches that have any dimension smaller than  10.0\n",
-      "USING BRANCHES instead of filtered branches!\n",
-      "testing branch # 0 avg span:  0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/shit/bin/anaconda3/lib/python3.6/site-packages/pandas/io/formats/format.py:1586: FutureWarning: \n",
-      "Passing list-likes to .loc or [] with any missing label will raise\n",
-      "KeyError in the future, you can use .reindex() as an alternative.\n",
-      "\n",
-      "See the documentation here:\n",
-      "http://pandas.pydata.org/pandas-docs/stable/indexing.html#deprecate-loc-reindex-listlike\n",
-      "  self.obj = self.obj.loc[:, cols]\n",
-      "/home/shit/bin/anaconda3/lib/python3.6/site-packages/pandas/core/indexing.py:1367: FutureWarning: \n",
-      "Passing list-likes to .loc or [] with any missing label will raise\n",
-      "KeyError in the future, you can use .reindex() as an alternative.\n",
-      "\n",
-      "See the documentation here:\n",
-      "http://pandas.pydata.org/pandas-docs/stable/indexing.html#deprecate-loc-reindex-listlike\n",
-      "  return self._getitem_tuple(key)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "testing branch # 1000 avg span:  34398.1253333\n",
-      "testing branch # 2000 avg span:  67684.9713333\n",
-      "testing branch # 3000 avg span:  100417.61\n",
-      "testing branch # 4000 avg span:  135599.097\n",
-      "testing branch # 5000 avg span:  168135.668\n",
-      "testing branch # 6000 avg span:  203019.533667\n",
-      "testing branch # 7000 avg span:  234844.360333\n",
-      "testing branch # 8000 avg span:  268357.728333\n",
-      "testing branch # 9000 avg span:  304192.899667\n",
-      "testing branch # 10000 avg span:  336945.003333\n",
-      "testing branch # 11000 avg span:  372532.318333\n",
-      "testing branch # 12000 avg span:  406559.440667\n",
-      "testing branch # 13000 avg span:  439785.407333\n",
-      "testing branch # 14000 avg span:  475205.946333\n",
-      "testing branch # 15000 avg span:  511078.612667\n",
-      "testing branch # 16000 avg span:  542001.683667\n",
-      "testing branch # 17000 avg span:  576585.393333\n",
-      "testing branch # 18000 avg span:  611765.019\n",
-      "testing branch # 19000 avg span:  646309.223\n",
-      "testing branch # 20000 avg span:  680056.589333\n",
-      "testing branch # 21000 avg span:  713208.363\n",
-      "testing branch # 22000 avg span:  745576.839\n",
-      "testing branch # 23000 avg span:  777954.093333\n",
-      "testing branch # 24000 avg span:  813321.920333\n",
-      "testing branch # 25000 avg span:  844658.793333\n",
-      "testing branch # 26000 avg span:  879293.113667\n",
-      "testing branch # 27000 avg span:  909948.881\n",
-      "testing branch # 28000 avg span:  943777.871333\n",
-      "testing branch # 29000 avg span:  975901.122667\n",
-      "testing branch # 30000 avg span:  1009365.42\n",
-      "testing branch # 31000 avg span:  1042604.59633\n",
-      "testing branch # 32000 avg span:  1074571.176\n",
-      "testing branch # 33000 avg span:  1107348.35067\n",
-      "testing branch # 34000 avg span:  1140088.25567\n",
-      "testing branch # 35000 avg span:  1174483.94333\n",
-      "testing branch # 36000 avg span:  1210286.45\n",
-      "testing branch # 37000 avg span:  1245419.56067\n",
-      "testing branch # 38000 avg span:  1276839.59533\n",
-      "testing branch # 39000 avg span:  1309779.56567\n",
-      "testing branch # 40000 avg span:  1347957.334\n",
-      "testing branch # 41000 avg span:  1381094.69967\n",
-      "testing branch # 42000 avg span:  1413927.271\n",
-      "testing branch # 43000 avg span:  1446779.109\n",
-      "testing branch # 44000 avg span:  1480695.30033\n",
-      "testing branch # 45000 avg span:  1513451.91333\n",
-      "testing branch # 46000 avg span:  1547813.22367\n",
-      "testing branch # 47000 avg span:  1581636.539\n",
-      "testing branch # 48000 avg span:  1613811.01\n",
-      "testing branch # 49000 avg span:  1646706.06633\n",
-      "testing branch # 50000 avg span:  1680903.696\n",
-      "testing branch # 51000 avg span:  1715397.53567\n",
-      "testing branch # 52000 avg span:  1748902.64433\n",
-      "testing branch # 53000 avg span:  1783034.593\n",
-      "testing branch # 54000 avg span:  1815071.91567\n",
-      "testing branch # 55000 avg span:  1848021.54733\n",
-      "testing branch # 56000 avg span:  1881767.525\n",
-      "testing branch # 57000 avg span:  1912905.50733\n",
-      "testing branch # 58000 avg span:  1946799.61533\n",
-      "testing branch # 59000 avg span:  1981899.86333\n",
-      "testing branch # 60000 avg span:  2013689.10967\n",
-      "testing branch # 61000 avg span:  2048876.909\n",
-      "total skipped: 0\n"
+      "0  branches upsampled and saved\n",
+      "1000  branches upsampled and saved\n"
      ]
     }
    ],
+   "source": [
+    "fnames, abs_paths = get_fnames_and_abspath_from_dir(BRANCHES_DIR)\n",
+    "assert(len(fnames)>0)\n",
+    "total_dim = 0\n",
+    "for i in range(len(fnames)):\n",
+    "    if (i % 1000 == 0):\n",
+    "        print(i, \" branches upsampled and saved\")\n",
+    "    \n",
+    "    # upsample the SWC\n",
+    "    # this function automatically writes the upsampled branches to disk\n",
+    "    upsampled_fpath = resample_swc(fnames[i], abs_paths[i], vaa3d_path)\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# tested size 25, but no branches met this criteria\n",
     "TARGET_DIM_SIZE = 10.  # size in pixels for all x,y,z dims\n",
@@ -176,8 +113,7 @@
     "\n",
     "print(\"filtering branches that have any dimension smaller than \", TARGET_DIM_SIZE)\n",
     "\n",
-    "print(\"USING BRANCHES instead of filtered branches!\")\n",
-    "fnames, abs_paths = get_fnames_and_abspath_from_dir(BRANCHES_DIR)\n",
+    "fnames, abs_paths = get_fnames_and_abspath_from_dir(UPSAMPLED_BRANCHES_DIR)\n",
     "assert(len(fnames)>0)\n",
     "total_dim = 0\n",
     "total_skipped = 0\n",
@@ -188,15 +124,9 @@
     "    \n",
     "    # replace nodes with our upsampled nodes\n",
     "    nodes = swc_to_dframe(abs_paths[i])\n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "\n",
     "        \n",
-    "    try:\n",
-    "        assert(isinstance(nodes, pd.DataFrame))\n",
-    "    except:\n",
-    "        total_skipped += 1\n",
-    "        continue\n",
+    "    assert isinstance(nodes, pd.DataFrame)\n",
     "    \n",
     "    x_span = nodes.x.max() - nodes.x.min()\n",
     "    y_span = nodes.y.max() - nodes.y.min()\n",
@@ -209,21 +139,13 @@
     "    if np.all(dim_size_good):  # our SWC meets our criteria\n",
     "        #print(\"{} is big enough\".format(i))\n",
     "        \n",
-    "        # upsample the SWC\n",
-    "        #upsampled_fpath = resample_swc(fnames, abs_paths[i])\n",
-    "        # replace nodes with our upsampled nodes\n",
-    "        #nodes = swc_to_dframe(upsampled_fpath)\n",
-    "        \n",
     "        # find nodes far enough away from bounds\n",
     "        central_nodes = nodes.loc[(nodes.x.between(nodes.x.min()+padding,nodes.x.max()+padding)) &\n",
     "                              (nodes.y.between(nodes.y.min()+padding,nodes.y.max()+padding)) &\n",
     "                              (nodes.z.between(nodes.z.min()+padding,nodes.z.max()+padding))]\n",
     "        \n",
-    "        if len(central_nodes) > 0:\n",
-    "            # sample more than once from same swc file\n",
-    "            for j in range(50):\n",
-    "                # sample a central node\n",
-    "                center_node = central_nodes.sample(n=1)\n",
+    "        sampled_nodes = central_nodes.sample(n=50, replace=False)\n",
+    "        for sample_i, center_node in sampled_nodes.iterrows():\n",
     "                # grab all nodes in neighborhood of center_node\n",
     "                sample = nodes.loc[(nodes.x.between(center_node.x.item()-half_size, center_node.x.item()+half_size)) &\n",
     "                                  (nodes.y.between(center_node.y.item()-half_size, center_node.y.item()+half_size)) &\n",
@@ -231,10 +153,11 @@
     "\n",
     "                # save sample to swc\n",
     "                #print(\"saving \", fnames[i])\n",
-    "                dframe_to_swc(fnames[i]+\"sample{}\".format(j), sample)\n",
+    "                dframe_to_swc(fnames[i]+\"sample{}\".format(sample_i), sample,\n",
+    "                             output_dir=\"../data/05_sampled_cubes/\")\n",
     "    else:  # SWC does not have large enough dims\n",
     "        #print(\"dims too small \", x_span, y_span, z_span) \n",
-    "        pass\n",
+    "        continue\n",
     "    \n",
     "print(\"total skipped:\", total_skipped)\n",
     "    \n",
