making upsampling a multiprocessing job

--- a/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
+++ b/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
@@ -75,28 +75,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0  branches upsampled and saved\n",
-      "1000  branches upsampled and saved\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fnames, abs_paths = get_fnames_and_abspath_from_dir(BRANCHES_DIR)\n",
     "assert(len(fnames)>0)\n",
-    "total_dim = 0\n",
-    "for i in range(len(fnames)):\n",
-    "    if (i % 1000 == 0):\n",
-    "        print(i, \" branches upsampled and saved\")\n",
-    "    \n",
-    "    # upsample the SWC\n",
-    "    # this function automatically writes the upsampled branches to disk\n",
-    "    upsampled_fpath = resample_swc(fnames[i], abs_paths[i], vaa3d_path)\n",
-    "  "
+    "\n",
+    "#https://medium.com/@bfortuner/python-multithreading-vs-multiprocessing-73072ce5600b\n",
+    "from concurrent.futures import ProcessPoolExecutor, ThreadPoolExecutor\n",
+    "\n",
+    "def multithreading(func, args, n_workers):\n",
+    "    with ThreadPoolExecutor(n_workers) as ex:\n",
+    "        #https://stackoverflow.com/a/6976926/4212158\n",
+    "        results = ex.map(lambda params: func(*params), args)\n",
+    "    return list(results)\n",
+    "\n",
+    "vaa3d_repeated = [vaa3d_path for _ in range(len(fnames))]\n",
+    "\n",
+    "multithreading(resample_swc, zip(fnames, abs_paths, vaa3d_repeated), 16)\n",
+    "\n",
+    "\n",
+    "#total_dim = 0\n",
+    "#for i in range(len(fnames)):\n",
+    "#   if (i % 1000 == 0):\n",
+    "#       print(i, \" branches upsampled and saved\")\n",
+    "# upsample the SWC\n",
+    "# this function automatically writes the upsampled branches to disk\n",
+    "# upsampled_fpath = resample_swc(fnames[i], abs_paths[i], vaa3d_path)"
    ]
   },
   {
