multithreaded cubing, and better documentation

--- a/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
+++ b/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the \"resample_swc\" Vaa3D plugin (written in C) to upsample all our data."
+    "Use the \"resample_swc\" Vaa3D plugin (written in C) to upsample all our data. I used concurrent.futures to split the job over multiple processors, change `n_workers` to suit your needs."
    ]
   },
   {
@@ -104,6 +104,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we want to only randomly sample from nodes sufficiently far away from the boundary. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -119,16 +126,11 @@
     "\n",
     "fnames, abs_paths = get_fnames_and_abspath_from_dir(UPSAMPLED_BRANCHES_DIR)\n",
     "assert(len(fnames)>0)\n",
-    "total_dim = 0\n",
-    "total_skipped = 0\n",
-    "for i in range(len(fnames)):\n",
-    "    \n",
-    "    if (i % 1000 == 0):\n",
-    "        print(\"testing branch #\", i, \"avg span: \", total_dim/3)\n",
-    "    \n",
-    "    # replace nodes with our upsampled nodes\n",
-    "    nodes = swc_to_dframe(abs_paths[i])\n",
     "\n",
+    "\n",
+    "def upsampled_branches_to_cubes(swc_fname, swc_abs_path):\n",
+    "    # load to dframe\n",
+    "    nodes = swc_to_dframe(swc_abs_path[i])\n",
     "        \n",
     "    assert isinstance(nodes, pd.DataFrame)\n",
     "    \n",
@@ -136,12 +138,8 @@
     "    y_span = nodes.y.max() - nodes.y.min()\n",
     "    z_span = nodes.z.max() - nodes.z.min()\n",
     "    \n",
-    "    total_dim = total_dim + x_span + y_span + z_span\n",
-    "    \n",
     "    dim_size_good = np.array([x_span, y_span, z_span]) > TARGET_DIM_SIZE\n",
-    "    #if z_span > TARGET_DIM_SIZE:   print(\"found z bigger than {}: {}\".format(int(TARGET_DIM_SIZE), z_span))\n",
     "    if np.all(dim_size_good):  # our SWC meets our criteria\n",
-    "        #print(\"{} is big enough\".format(i))\n",
     "        \n",
     "        # find nodes far enough away from bounds\n",
     "        central_nodes = nodes.loc[(nodes.x.between(nodes.x.min()+padding,nodes.x.max()+padding)) &\n",
@@ -157,14 +155,13 @@
     "\n",
     "                # save sample to swc\n",
     "                #print(\"saving \", fnames[i])\n",
-    "                dframe_to_swc(fnames[i]+\"sample{}\".format(sample_i), sample,\n",
+    "                dframe_to_swc(swc_fname+\"sample{}\".format(sample_i), sample,\n",
     "                             output_dir=\"../data/05_sampled_cubes/\")\n",
     "    else:  # SWC does not have large enough dims\n",
     "        #print(\"dims too small \", x_span, y_span, z_span) \n",
-    "        continue\n",
+    "        pass\n",
     "    \n",
-    "print(\"total skipped:\", total_skipped)\n",
-    "    \n",
+    "multithreading(upsampled_branches_to_cubes, zip(fnames, abs_paths), 16)\n",
     "    "
    ]
   },
@@ -172,23 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we want to only randomly sample from nodes sufficiently far away from the boundary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sample from the SWC\n",
-    "# first, we won't pick nodes too close to the edges\n",
-    "#filtered_nodes = np.where()\n",
-    "#print(\"dim sizes are good\")\n",
-    "\n",
-    "for swc_file in good_swc_paths[:1]: # TODO remove slice\n",
-    "    nodes = good_swcs[swc_file]\n",
-    "    good_nodes = "
+    "Note: since we are randomly cropping the node cloud, we will no longer have a node designated as the root node \"-1\" in each file."
    ]
   },
   {
